--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ p{
 
 .caixa1,  .caixa2, .caixa3, .caixa4, .caixa5, .caixa6 {
     height: 100%;
+    position: relative;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -54,4 +55,24 @@ p{
 
 .caixa6{
     background-image: url(imagens/imagem6.jpg);
+}
+
+.conteudo-titulo{
+    position: absolute;
+    left: 0;
+    top: 45%;
+    width: 100%;
+    text-align: center;
+    
+    
+}
+
+
+.conteudo-titulo span.titulo{
+    background:#111 ;
+    padding: 18px;
+    font-size: 25px;
+    letter-spacing: 5px;
+    color:#fff;
+    text-transform: uppercase;
 }
